--- a/css/_custom-buttons.scss
+++ b/css/_custom-buttons.scss
@@ -39,7 +39,6 @@
 .close-trailer-btn {
 	@include close-btn;
 	float: right;
-	right: 26px;
 	position: relative;
 	margin-bottom: 10px;
 }
